PGC/k8s/ej2_2/pod-apache.yaml
apiVersion: v1
kind: Pod
metadata:
 name: apache
 labels:
  app: apache
spec:
 volumes:
  - name: nfs
    persistentVolumeClaim:
     claimName: nfs-pvc
 containers:
 - name: apache
   image: httpd:latest
   ports:
   - containerPort: 80
   volumeMounts:
   - mountPath: "/usr/local/apache2/htdocs"
     name: nfs
     subPath: "apache"
