PGC/k8s/ej2_2/pod-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
 name: nginx
 labels:
  app: nginx
spec:
 volumes:
  - name: nfs
    persistentVolumeClaim:
     claimName: nfs-pvc
 containers:
 - name: nginx
   image: nginx
   ports:
   - containerPort: 80
   volumeMounts:
   - mountPath: /usr/share/nginx/html
     name: nfs
     subPath: "nginx"
