PGC/k8s/ej2_2/svc-nginx.yaml
kind: Service
apiVersion: v1
metadata:
 name: nginx-service
spec:
 selector:
   app: nginx
 ports:
 - protocol: TCP
   port: 9376
   targetPort: 80
