PGC/k8s/ej2_2/ingress-apache.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: apache-ingress
 annotations:
  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
  - host: mihost
    http:
      paths:
      - path: /apache
        pathType: Prefix
        backend:
          service:
            name: apache-service
            port:
              number: 80
